<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="7"
    tools:context=".MainActivity" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="5" >

        <TextView
            android:id="@+id/rcvd_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/rcvd_msg"
            android:scrollbars="vertical" />
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2" >

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="copyMessageToClipboard"
            android:text="@string/button_copy" />

        <Button
            android:id="@+id/next_msg"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="showNextMessage"
            android:text="@string/button_nextMsg" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal" >

        <ToggleButton
            android:id="@+id/button_cnct_disco"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:onClick="connect_disconnect"
            android:textOff="@string/button_cnct"
            android:textOn="@string/button_disco" />
    </LinearLayout>

</LinearLayout>